# tralinz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  runlog.txt
configs/: pico-base-mha.json
dataset/: maketokenizer.py  splitcat.sh  tokenizer-owt2m-16k.json  uc4-unigram-12k.json
models/: base-mha-train-config.json
models/base-mha/: config.json
src/: args.rs  basemha.rs  dataset.rs  learn.rs  main.rs  tokut.rs
