[package]
name = "tralinz"
version = "0.1.0"
edition = "2021"
description = "Implements and trains small transformer models with various attention types."

[dependencies]
burn = { path = "./deps/burn/crates/burn", features = [
    "train",
    "tui",
    "metrics",
    # "wgpu",
    # "cuda",
    "fusion",
    "std",
] }
# Force pre-release to workaround breaking changes
bincode = "^2.0.0-rc.3"
bincode_derive = "^2.0.0-rc.3"
clap = { version = "4.5.32", features = ["derive"] }
tokenizers = "0.21.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "ansi",
    "env-filter",
] }
rand = "0.9.0"
bytemuck = "1.22.0"
rayon = "1.10.0"
memmap2 = "0.9.5"
burn-tch = { path = "./deps/burn/crates/burn-tch" }
# burn-ndarray = "0.16.0"
# burn-cuda = "0.16.0"
